--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
-<div>
-    Hello
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <script>
+        getData();
+
+
+        async function getData() {
+            const api_url = 'https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&ids=bitcoin'
+            const response = await fetch(api_url);
+            // const response = await fetch('https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&ids=bitcoin');
+            const data = await response.json();
+            console.log(data);
+        };
+    </script>
+</body>
+</html>
