API data pulled to table

--- a/index.html
+++ b/index.html
@@ -6,37 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="coingecko.js"></script> 
 <body>
     <!--Button Insert-->
-    <input type="button" onclick="Insert_Data()" value="Insert" />
-    <!--Table-->
-    <table id="myTable">
-    <tr>
-        <th>Full Name</th>
-        <th>Age</th>
-        <th>Country</th>
-    </tr>
-    <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-    <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-    <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-    <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-    </table>   
+    <input type="button" onclick="getData()" value="Insert" />
+
+    <table></table>
+ 
 </body>
 </html>
